Made new changes
Changes to the auto.html

--- a/auto.html
+++ b/auto.html
@@ -2,6 +2,7 @@
 <HTML>
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="refresh" content="5; url=match_found.html">
 <title>My Vehicle App</title>
 
     <link href="format.css" rel="stylesheet">
