--- a/match_found.html
+++ b/match_found.html
@@ -17,7 +17,7 @@
  
  <article data-role="content">
  
-<img src="C:\Users\StudentLocal\Desktop\SoloAssignment-jQueryProtoype\match.jpg" width="200" height="100" alt="Match Found">
+<img src="match.jpg" width="200" height="100" alt="Match Found">
     
     <h1> Authorities Notified! </h1>
     
